--- a/src/index.html
+++ b/src/index.html
@@ -424,3 +424,19 @@ title: Marketing
     </ul>
   </div>
 </div>
+
+
+<section class="connection section" id="connection">
+  <div class="container">
+    <h2 class="title connection__title">
+      Get in Touch
+    </h2>
+    <form class="form" data-aos="fade-right">
+      <input type="text" placeholder="ИМЯ">
+      <input type="text" placeholder="EMAIL">
+      <textarea placeholder="ВАШЕ СООБЩЕНИЕ"></textarea>
+      <button type="submit">ОТПРАВИТЬ</button>
+    </form>
+  </div>
+</section>
+
