--- a/src/index.html
+++ b/src/index.html
@@ -28,26 +28,29 @@ title: Marketing
   </div>
 </section>
 
-
 <section class="expertise">
   <div class="container">
     <h2 class="title expertise__title" data-aos="fade-right">Our Expertise</h2>
     <div class="expertise__inner">
-      <div class="expertise__info" >
-        <div class="expertise__info-item">
-          BRANDING
-          <span style="width: calc(100% - 90%)">90%</span>
-        </div>
-        <div class="expertise__info-item">
-          DESIGN
-          <span style="width: calc(100% - 80%)">80%</span>
-        </div>
-        <div class="expertise__info-item">
-          DEVELOPMENT
-          <span style="width: calc(100% - 85%)">85%</span>
-        </div>
+      <div class="expertise__info" data-aos="fade-right">
 
+        <div class="expertise__info-item">
+          <span data-progress="90"></span>
+          <p class="expertise__info-text"></p>
+          <div class="expertise__info-name"> BRANDING</div>
+        </div>
+        <div class="expertise__info-item">
+          <span data-progress="80"></span>
+          <p class="expertise__info-text"></p>
+          <div class="expertise__info-name"> DESIGN</div>
+        </div>
+        <div class="expertise__info-item">
+          <span data-progress="85"></span>
+          <p class="expertise__info-text"></p>
+          <div class="expertise__info-name"> DEVELOPMENT</div>
+        </div>
       </div>
+
       <div class="expertise__text">
         <p data-aos="fade-up">
           В стратегию интернет-маркетинга входит создание имиджевой и рекламной концепции, разработка
@@ -185,6 +188,7 @@ title: Marketing
   <a href="#" class="portfolio__add">
     VIEW MORE PROJECTS
   </a>
+
   <blockquote class="blockquote" data-aos="fade">
     «Неважно какую историю вы рассказываете, главное – сделайте своего покупателя героем»
     <span class="blockquote__author" data-aos="fade-up" data-aos-delay="300">
@@ -424,7 +428,6 @@ title: Marketing
     </ul>
   </div>
 </div>
-
 
 <section class="connection section" id="connection">
   <div class="container">
