--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,9 @@ title: Marketing
       </div>
     </div>
   </div>
-</section>
+</section> 
 
-<section class="expertise">
+ <section class="expertise">
   <div class="container">
     <h2 class="title expertise__title" data-aos="fade-right">Our Expertise</h2>
     <div class="expertise__inner">
@@ -231,7 +231,7 @@ title: Marketing
   </div>
 </section>
 
-<section class="slider">
+ <!--<section class="slider">
   <div class="container">
     <div class="slider__blog-inner">
 
@@ -442,4 +442,4 @@ title: Marketing
     </form>
   </div>
 </section>
-
+ -->
