--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@ title: Marketing
   </div>
 </section> 
 
- <section class="expertise">
+ <section class="expertise section">
   <div class="container">
     <h2 class="title expertise__title" data-aos="fade-right">Our Expertise</h2>
     <div class="expertise__inner">
@@ -195,6 +195,7 @@ title: Marketing
       Крис Броган
     </span>
   </blockquote>
+
   <div class="portfolio__video">
     <a class="portfolio__video-link" 
       href="https://www.youtube.com/watch?v=B911crvGE8c" data-fancybox>
@@ -231,7 +232,7 @@ title: Marketing
   </div>
 </section>
 
- <!--<section class="slider">
+<section class="slider section">
   <div class="container">
     <div class="slider__blog-inner">
 
@@ -360,7 +361,7 @@ title: Marketing
   </div>
 </section>
 
-<section class="pricing">
+<section class="pricing section">
   <div class="container">
     <h2 class="title pricing__title" data-aos="fade-right">Pricing Plans</h2>
 
@@ -407,7 +408,7 @@ title: Marketing
   </div>
 </section>
 
-<div class="clients">
+ <div class="clients section">
   <div class="container">
     <ul class="clients__list">
       <li data-aos="zoom-in">
@@ -442,4 +443,4 @@ title: Marketing
     </form>
   </div>
 </section>
- -->
+
