fixed bug with js

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Marketing
 ---
 
-<section class="about section" id="about">
+<section class="about section nav" id="about">
   <div class="container">
     <div class="about__inner">
       <h2 class="title about__title" data-aos="fade-right">
@@ -28,7 +28,7 @@ title: Marketing
   </div>
 </section> 
 
- <section class="expertise section">
+<section class="expertise section">
   <div class="container">
     <h2 class="title expertise__title" data-aos="fade-right">Our Expertise</h2>
     <div class="expertise__inner">
@@ -123,7 +123,7 @@ title: Marketing
   </div>
 </section>
 
-<section class="portfolio section" id="portfolio">
+<section class="portfolio section nav" id="portfolio">
   <div class="container">
     <div class="portfolio__top">
       <h2 class="title" data-aos="fade-right">
@@ -318,7 +318,7 @@ title: Marketing
   </div>
 </section>
 
-<section class="team section" id="team">
+<section class="team section nav" id="team">
   <div class="container">
     <h2 class="title team__title" data-aos="fade-right">
       Our Team
@@ -430,7 +430,7 @@ title: Marketing
   </div>
 </div>
 
-<section class="connection section" id="connection">
+<section class="connection section nav" id="connection">
   <div class="container">
     <h2 class="title connection__title" data-aos="fade-right">
       Get in Touch
